tests/fixtures/errors/typecheck-only/src/Main3.elm
module Main3 exposing (main)

import Html
import Main2


main =
    Html.text Main2.forMain3
